fix sdk test case